Bug 1328559 (flattened) - Built-in attribs should have location of -1. - r=daoshengmu

But ANGLE gives back valid >=0 locations!

MozReview-Commit-ID: 9zYiX5BGGud